# sports-calendar

./: README.md  pyproject.toml  requirements.txt
app/: main.py
app/src/application/infrastructure/models/: __init__.py  event_model.py  sport_model.py
app/src/application/infrastructure/repositories/: event_repository.py  sport_repository.py
app/src/application/schemas/: event.py  sport.py
app/src/router/: event.py  sport.py
