[tool.poetry]
name = "sport-calendar"
version = "0.1.0"
description = "A simple sport calendar app"
authors = ["Rafael Acosta <theGitNoob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
